WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280572
[FFC] Fix css3/flexbox/flex-algorithm.html
https://bugs.webkit.org/show_bug.cgi?id=280572
Summary
[FFC] Fix css3/flexbox/flex-algorithm.html
alan
Reported
2024-09-28 14:33:10 PDT
ssia
Attachments
[fast-cq]Patch
(1.53 KB, patch)
2024-09-28 14:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-28 14:39:37 PDT
Created
attachment 472722
[details]
[fast-cq]Patch
EWS
Comment 2
2024-09-29 07:51:27 PDT
Committed
284429@main
(f814831d6168): <
https://commits.webkit.org/284429@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472722
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-09-29 07:52:18 PDT
<
rdar://problem/136925748
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug