[FFC] Fix css3/flexbox/flex-algorithm.html https://bugs.webkit.org/show_bug.cgi?id=280572

Reviewed by Antti Koivisto.

This is to cover flex-shrink(grow): 100000000000000000000000000000000000000.

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::computeMainSizeForFlexItems const):

Canonical link: https://commits.webkit.org/284429@main